2001-05-20  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c: Prefer bridge over settlement.

2011-05-14  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c, common/gtk/guimap.h, common/gtk/polygon.c,
	common/gtk/polygon.h, client/gtk/identity.c: Use cairo in guimap.c

2011-05-04  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Upgrade to GTK 2.24

2011-05-03  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c, common/gtk/guimap.h, client/gtk/histogram.c:
	Migrate histogram.c to cairo.

2011-04-30  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/resource.c, client/gtk/legend.c, client/gtk/gui.c,
	client/gtk/gui.h: Upgrade gui.c to GTK 2.24

2011-04-29  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c, client/gtk/resource.c: Replace gdk_draw_drawable.
	* client/gtk/connect.c, configure.ac: Upgrade to GTK 2.24

2011-02-23  Micah Bunting <Amnykon@gmail.com>
	* editor/gtk/editor.c, common/gtk/guimap.c, common/gtk/guimap.h,
	client/gtk/gui.c: Add pan and zoom for the scroll wheel.

2011-02-23  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c, common/gtk/theme.h, common/gtk/guimap.c,
	common/gtk/guimap.h, client/gtk/legend.c, client/gtk/quote-view.c,
	client/gtk/histogram.c: Move terrain drawing code to theme.

2011-02-21  Micah Bunting <Amnykon@gmail.com> and
        Roland Clobus <rclobus@rclobus.nl>
        * editor/gtk/editor.c, common/map.c, common/map.h: Resize the map with
        insert and remove at both ends.

2011-02-18  Micah Bunting <Amnykon@gmail.com>
	* common/map.c: Use new accessor functions.

2011-02-16  Micah Bunting <Amnykon@gmail.com>
	* common/map.c: Fixed infinite loop for large maps.

2011-02-15  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/gameover.c: Remove second log entry about winning.

2011-02-13  Roland Clobus <rclobus@rclobus.nl>
	* client/common/player.c: Translate the name of the additional points.

2011-02-05  Roland Clobus <rclobus@rclobus.nl>