@@ -1,0 +1,5 @@
+#ifdef HAVE_OLD_GTK
+#define gtk_combo_box_text_new(A) gtk_combo_box_new_text(A)
+#define gtk_combo_box_text_append_text(A, B) gtk_combo_box_append_text(A, B)
+#define GTK_COMBO_BOX_TEXT(obj)             (G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_COMBO_BOX, GtkComboBox))
+#endif
